ID-4102: Oppgradere til Spring boot 3 og java 21